src/main/java/com/example/rsupporttest/error/ErrorCode.java
package com.example.rsupporttest.error;

/** 단순한 에러 코드만을 관리합니다. */
public enum ErrorCode implements CoreErrorCode {

    // 클라이언트 에러
    A0001,
    A0002,
    A0003,

    // 서버 에러
    B0001,
    B0002,
    B0003,
    ;
}
